# sui-memory

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  main.py  pyproject.toml  recall_dump.py
src/: chunker.py  embedder.py  hook.py  injector.py  retriever.py  storage.py
src/sui_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunker.py  test_chunker_v2.py  test_e2e_score_report.py  test_embedder.py  test_incremental_save.py  test_lazy_embed.py  test_recall_logic.py  test_retriever.py  test_storage.py  test_storage_review.py
