[project]
name = "sui-memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "janome>=0.5.0",
    "numpy>=2.4.3",
    "sentence-transformers>=5.3.0",
    "sqlite-vec>=0.1.7",
]

[project.scripts]
sui-memory-hook = "src.hook:main"
sui-memory-inject = "src.injector:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
